--- a/ChallengeBCP/Delivery/Flows/Splash/View/SplashViewController.xib
+++ b/ChallengeBCP/Delivery/Flows/Splash/View/SplashViewController.xib
@@ -19,17 +19,17 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bcp_logo" translatesAutoresizingMaskIntoConstraints="NO" id="oV9-4u-NdT">
-                    <rect key="frame" x="107" y="218" width="200" height="89"/>
+                    <rect key="frame" x="82" y="403.5" width="250" height="89"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="200" id="K07-qt-LDp"/>
+                        <constraint firstAttribute="width" constant="250" id="wxy-px-quY"/>
                     </constraints>
                 </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="oV9-4u-NdT" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="170" id="2Ca-I3-peV"/>
-                <constraint firstItem="oV9-4u-NdT" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="MP4-VF-kpU"/>
+                <constraint firstItem="oV9-4u-NdT" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="38e-bo-smY"/>
+                <constraint firstItem="oV9-4u-NdT" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="UTC-xA-PvI"/>
             </constraints>
             <point key="canvasLocation" x="-358" y="-31"/>
         </view>
